--- a/layout_practice/layout2/index.html
+++ b/layout_practice/layout2/index.html
@@ -11,6 +11,10 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="flex-container">
+    <p>Logo</p>
+    <p class="right">products services</p>
+  </div>
   <div class="container">
     <div class="main-container">
       <p class="main-title">Buy Our Shoes!</p>
