--- a/layout7/index.html
+++ b/layout7/index.html
@@ -11,21 +11,98 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="card shadow-lg" style="width: 18rem;">
-    <img src="./picture1.jpg" class="card-img-top">
-    <div class="card-body">
-      <span class="badge bg-primary rounded-pill">News</span>
-      <h4 class="mt-2">Blog Post Title</h4>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  <div class="container">
+    <div class="card shadow-lg mb-4" style="width: 18rem;">
+      <img src="./img/picture1.jpg" class="card-img-top">
+      <div class="card-body">
+        <span class="badge bg-primary rounded-pill">News</span>
+        <h4 class="mt-2">Blog Post Title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      <div class="d-flex">
+        <div class="flex-shrink-0 ms-3">
+          <img class="rounded-circle" src="./img/picture2.jpg" width="50px" height="50px">
+        </div>
+        <div class="flex-shrink-1 ms-2">
+          <h6 class="mt-1 mb-0">Kelly Rowan</h6>
+          <p class="fs-6 fw-light">March 12, 2021, 6 min read</p>
+        </div>
+      </div>
     </div>
-    <div class="d-flex">
-      <div class="flex-shrink-0 ms-3">
-        <img class="rounded-circle"src="./picture2.jpg" width="50px" height="50px">
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-lg-6 col-xl-3">
+        <div class="card">
+          <img src="./img/photo1.jpg" class="card-img-top" alt="#">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
       </div>
-      <div class="flex-shrink-1 ms-2">
-        <h6 class="mt-1 mb-0">Kelly Rowan</h6>
-        <p class="fs-6 fw-light">March 12, 2021, 6 min read</p>
+      <div class="col-sm-12 col-lg-6 col-xl-3">
+        <div class="card">
+          <img src="./img/photo1.jpg" class="card-img-top" alt="#">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
       </div>
+      <div class="col-sm-12 col-lg-6 col-xl-3">
+        <div class="card">
+          <img src="./img/photo1.jpg" class="card-img-top" alt="#">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-6 col-xl-3">
+        <div class="card">
+          <img src="./img/photo1.jpg" class="card-img-top" alt="#">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-3 col-lg-2 order-lg-2">
+        <img src="./img/author.png" alt="#">
+      </div>
+      <div class="col-sm-9 col-lg-5 order-lg-1">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="col-sm-0 col-lg-5 order-lg-3"></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-3 col-lg-2 order-lg-2">
+        <img src="./img/author2.png" alt="#">
+      </div>
+      <div class="col-sm-9 col-lg-5 order-lg-3">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="col-sm-0 col-lg-5 order-lg-1"></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-3 col-lg-2 order-lg-2">
+        <img src="./img/author3.png" alt="#">
+      </div>
+      <div class="col-sm-9 col-lg-5 order-lg-1">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="col-sm-0 col-lg-5 order-lg-3"></div>
     </div>
   </div>
 </body>
